--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".kt.high_order_func.TestHighOrderActivity"></activity>
+        <activity android:name=".kt.FuncActivity" />
+        <activity android:name=".kt.expand_func.TestExpandActivity" />
         <activity android:name=".coroutine.CoroutineScopeActivity" />
         <activity android:name=".result_api.BaseResultActivity" />
         <activity android:name=".result_api.FirstActivity">
