--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,14 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".db.RealmTestActivity"></activity>
-        <activity android:name=".BaseActivity" />
+        <activity android:name=".db.RealmTestActivity" />
         <activity android:name=".file_read.FileMainActivity" />
         <activity android:name=".file_read.FileTestActivity" />
         <activity android:name=".kt.high_order_func.TestHighOrderActivity" />
