--- a/basiclib/build.gradle
+++ b/basiclib/build.gradle
@@ -29,9 +29,10 @@ dependencies {
     api 'androidx.appcompat:appcompat:1.2.0'
     api 'androidx.recyclerview:recyclerview:1.1.0'
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
-    api 'com.blankj:utilcode:1.30.5'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha07'
     api 'com.squareup.retrofit2:retrofit:2.9.0'
     api 'com.squareup.retrofit2:converter-gson:2.9.0'
+    api 'com.blankj:utilcodex:1.30.5'
+    debugApi 'com.didichuxing.doraemonkit:dokitx:3.3.5'
 }
