--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".db.DbHelperTestActivity"></activity>
         <activity android:name=".db.RealmTestActivity" />
         <activity android:name=".file_read.FileMainActivity" />
         <activity android:name=".file_read.FileTestActivity" />
