--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".lazy.ViewPagerActivity"></activity>
+        <activity android:name=".lazy.child.ChildStartActivity"></activity>
+        <activity android:name=".lazy.ViewPagerActivity" />
         <activity android:name=".image_compress.ImageCompressActivity" />
         <activity android:name=".viewbindrecycler.ViewBindingRecyclerActivity" />
         <activity android:name=".db.DbHelperTestActivity" />
