--- a/basiclib/src/main/AndroidManifest.xml
+++ b/basiclib/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ck2020.basiclib">
+<manifest package="com.ck2020.basiclib">
 
     /
 </manifest>
