--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".lazy.child.ChildStartActivity"></activity>
+        <activity android:name=".gson.GsonTestActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".lazy.child.ChildStartActivity" />
         <activity android:name=".lazy.ViewPagerActivity" />
         <activity android:name=".image_compress.ImageCompressActivity" />
         <activity android:name=".viewbindrecycler.ViewBindingRecyclerActivity" />
@@ -48,11 +55,7 @@
         <activity android:name=".customview.volumeview.VolumeActivity" />
         <activity android:name=".customview.verificationview.VerificationActivity" />
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
